# Final_project

./: Python_presentation.pptx
Real_final_project/: ML_option.py  README  main.py  pyproject.toml  thing_we_took_out.py  workspace.code-workspace
Real_final_project/graphs/: R2_catagorization_awake_dataset.docx  R2_catagorization_full_dataset.docx  RF_R2_awake_dataset.docx  correlation_catagorization_awake_dataset.docx  correlation_catagorization_sleep_dataset.docx
Real_final_project/src/: data_analysis.py  data_cleaning.py  data_visualization.py  main.py
Real_final_project/tests/: test_analysis.py  test_cleaning.py  test_visualization.py
graphs/: R2_catagorization_sleep_dataset.docx  RF_R2_sleep_dataset.docx  correlation_catagorization_full_dataset.docx
