[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainwave_analysis"
version = "0.1.0"
description = "A Python project for brainwave analysis and visualization."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["brainwave", "FFT", "data analysis", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
numpy = "^1.23"
pandas = "^2.0"
seaborn = "^0.12"
missingno = "^0.5"
scikit-learn = "^1.3"
matplotlib = "^3.7"
pandas-profiling = "^3.6.6"  

