[tool.poetry]
name = "brainwave_analysis"
version = "0.1.0"
description = "A package for analyzing and visualizing brainwave correlations with attention and meditation levels."
authors = ["Vered & Aviva <ahellerbiu@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
numpy = "^1.23.3"
scipy = "^1.10.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[tool.poetry.urls]
homepage = "https://github.com/AvivaHeller/Final_project"
repository = "https://github.com/AvivaHeller/Final_project"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

