[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "brainwave_analysis"
version = "0.1.0"
description = "A package for analyzing and visualizing brainwave correlations with attention and meditation levels."
authors = ["Vered & Aviva <ahellerbiu@gmail.com>"]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.3",
    "numpy>=1.23.3",
    "scipy>=1.10.1",
    "matplotlib>=3.6.2",
    "seaborn>=0.12.2",
    "scikit-learn>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.2"
]

[project.urls]
homepage = "https://github.com/AvivaHeller/Final_project"
repository = "https://github.com/AvivaHeller/Final_project"


